try bug fixes on ios safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,9 +47,9 @@
   }
 
   input {
-    @apply placeholder:text-sm placeholder:tracking-tight placeholder:font-light placeholder:xl:text-base
+    @apply placeholder:text-base placeholder:tracking-tight placeholder:font-light
         focus:border-amber-700 focus:ring-0 border focus:outline-none
-        w-full rounded p-2 tracking-tight font-normal text-sm xl:text-base border-gray-300
+        w-full rounded p-2 tracking-tight font-normal text-base border-gray-300
         read-only:bg-gray-300 read-only:border-gray-300 read-only:focus:ring-0 read-only:focus:border-gray-300 read-only:text-gray-500;
   }
 }
@@ -57,13 +57,6 @@
 @layer components {
   .basic-transition {
     @apply transition-all duration-200 ease-in-out;
-  }
-
-  .input-form {
-    @apply placeholder:text-sm placeholder:tracking-tight placeholder:font-light placeholder:xl:text-base
-        focus:border-amber-700 focus:ring-0 border focus:outline-none
-        w-full rounded p-2 tracking-tight font-normal text-sm xl:text-base border-gray-300
-        read-only:bg-gray-300 read-only:border-gray-300 read-only:focus:ring-0 read-only:focus:border-gray-300 read-only:text-gray-500;
   }
 
   .button-small {
